@@ -1,7 +1,9 @@
 2007-09-27  Petr Ovtchenkov  <ptr@island.corbina.net>
 
 	* vshostmgr.cc, janus.cc, vtime.cc: print trace info before
-	stem's Send.
+	stem's Send;
+
+	* Makefile: define __FIT_VS_TRACE macro for debug targets.
 
 2007-09-25  Petr Ovtchenkov  <ptr@island.corbina.net>
 
